CRM.Client/wwwroot/css/site.css
/* ... */
.highcharts-background {
    fill: var(--highcharts-background-color);
}

.highcharts-container text {
    fill: var(--highcharts-text-color) !important;
}

.highcharts-subtitle,
.highcharts-credits,
.highcharts-axis-title {
    fill-opacity: 0.7;
}

.highcharts-grid-line {
    stroke: var(--highcharts-text-color);
    stroke-opacity: 0.2;
}

.highcharts-tooltip-box {
    fill: var(--highcharts-tooltip-background-color) !important;
}

.highcharts-column-series rect.highcharts-point {
    stroke: var(--highcharts-background-color);
}

.rz-event-content.deleted {
    background-color:red;
    color:black;
}

.rz-button.rz-secondary {
    --rz-secondary: #0d6efd;
}

.btn.pad-left {
    margin-left: .5em;
}

h1.block {
    display:inline-block;
}

.header {
    display:inline-block;
    position:relative;
    top:-.25em;
}

.header-xs {
    display:inline-block;
    position:relative;
    top:-.25em;
    font-size:0.8em;
}

.appointment-calendar {
    height:calc(100vh - 125px) !important;
}

.appointment-calendar.full-height {
    height:calc(100vh - 85px);
}

input.date-picker:not(.full-width) {
    width: 155px;
    min-width: 155px;
    max-width: 155px;
}

input.time-picker:not(.full-width) {
    width: 125px;
    min-width: 125px;
}

input.date-time-picker:not(.full-width) {
    width: 255px;
    min-width: 255px;
    max-width: 255px;
}

h2.quick-action {
    font-size:1.5em;
}

.deleted-records {
    color:red;
}

.appointment-note,
.deleted-record {
    border:solid 1px #555;
    padding:.4em;
    margin-bottom:.2em;
    border-radius:5px;
}

.deleted-record .item-title {
}

.deleted-record .deleted-info {
    font-size:0.8em;
    opacity:0.6;
    text-align:right;
}

.tooltip-item {
    cursor: pointer;
}

.info-tip {
    color: #2196f3;
    /*font-variation-settings: 'FILL' 1, 'wght' 700, 'GRAD' 0, 'opsz' 48;*/
}

.calendar-style-sample {
    padding: .2em;
    border-radius: .4em;
}

.rz-html-editor,
.rz-html-editor i.rzi,
.rz-html-editor textarea {
    color: #000;
}

.ql-toolbar,
.ql-container {
    background-color:#fff;
    color:#000;
}

.file-selector {
    display: inline-block;
    margin: 0 1em 1em 0;
    border: solid 1px #000;
    border-radius: .5em;
    background-color: #fff;
    cursor: pointer;
    max-width: 150px;
    min-width: 150px;
}

.file-selector:hover {
    background-color:#eee;
}

.file-thumbnail {
    height: 150px;
    max-height: 150px;
    min-height: 150px;
    display: flex;
    justify-content: center;
}

.file-thumbnail img {
    max-height:150px;
    width:100%;
}

.file-name {
    color:#000;
    font-size:0.8em;
    opacity:0.8;
    padding-left:.5em;
}

.input-group-text i.icon-google {
    position:relative;
    top:0px;
}

.auto-hide-overflow {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    width: 100%;
    max-width: 0;
}

.auto-overflow {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.html-editor {
    background-color:#fff;
    color:#000;
}

.m-r iframe {
    background: palevioletred !important;
    background-color: palevioletred !important;
}

.item-file {
    text-align:left;
    width:160px;
    max-width:160px;
    min-height:180px;
    max-height:180px;
    padding:6px;
    background:#fff;
    border:solid 1px #ddd;
    -webkit-box-shadow: 0 3px 5px rgba(0,0,0, .7);
    -moz-box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7);
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.7);
    /*float:left;*/
    margin:0 0.3em 0.3em 0;
    font-size:.8em;
    line-height:1em;
    position:relative;
    display:inline-block;
    vertical-align:top;
}

.item-file .item-file-delete-button {
    display:inline-block;
    text-align:left;
    position:absolute;
    top:5px;
    left:5px;
    z-index:10;
}

.item-file .item-file-image {
    min-height:150px;
    max-height:150px;
    cursor:pointer;
    display:flex;
    justify-content:center;
}

.item-file .item-file-image img {
    max-height:150px;
    max-width:100%;
    width:auto;
    height:auto;
    position:absolute;
    top:0;
    bottom:0;
    left:0;
    right:0;
    margin:auto;
}

.item-file .item-file-label {
    max-height:50px;
    width:148px;
    max-width:148px;
    overflow:hidden;
    position:absolute;
    bottom:5px;
    color:#888;
}

.item-file-label .file-name {
    max-width: 95px;
    width: 95px;
    line-height: 1.2em;
    max-height: 1.2em;
    overflow: hidden;
    text-overflow: ellipsis;
    display: inline-block;
    white-space: nowrap;
    float: left;
    text-align: left;
}

.item-file-label .file-size {
    max-width: 50px;
    width: 50px;
    display: inline-block;
    float: right;
    text-align: right;
}

.loading-spinner {
    width: 24px;
    height: 24px;
}

.view-text-file {
    margin-top: .5em;
    padding: .5em;
    border: solid 1px #888;
}

textarea.autogrow {
    -webkit-transition: height .5s;
    transition: height .5s;
    height: 90px;
}

textarea.autogrow:focus {
    height: 400px;
}

button.show-on-hover {
    opacity:0.8;
}

button.show-on-hover:hover {
    opacity:1;
}

button.show-on-hover span {
    display:none;
}

button.show-on-hover:hover span {
    display:inline;
}

.offcanvas-body .icon {
    min-width: 20px;
}

div.menu-icon-wrapper {
    width: 20px;
    min-width: 28px;
    display: inline-block;
    text-align: center;
}

.rz-dropdown-items.rz-state-disabled li:hover,
.rz-dropdown-item.rz-state-disabled:hover {
    background-color: unset;
    color: unset;
    cursor: not-allowed;
}

.alert p:last-child {
    margin-bottom: 0;
}

.alert.no-margin-bottom {
    margin-bottom: 0;
}

.alert h2.subtitle {
    margin-bottom: 0;
}

label {
    font-weight:bold;
}

label.unbold {
    font-weight:normal;
}

.prompt-content {
    border: dashed 1px var(--bs-border-color);
    border-radius: .4em;
    padding: .4em;
}

.prevent-select {
    -webkit-user-select: none; /* Safari */
    -ms-user-select: none; /* IE 10 and IE 11 */
    user-select: none; /* Standard syntax */
}
/* ... */

